--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "base-64": "^1.0.0",
+    "events": "^3.3.0",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.7",
-    "typescript": "^4.6.4",
+    "snoowrap": "^1.23.0",
+    "stream": "0.0.2",
+    "url": "^0.11.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,7 +55,10 @@
     ]
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.0",
     "@types/react-window": "^1.8.5",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4"
   }
 }
